resolved overlapping of upload image interface

--- a/interface.css
+++ b/interface.css
@@ -8,6 +8,24 @@
     width: 100%;
     height: 100%;
 }
+
+.uploadedimg{
+    height: 50px;
+    width: 50px;
+    float:left;
+    margin: 0px 5px 0px 5px ;
+    /* margin-top: 5px; */
+    /* margin-left: 5px; */
+    box-sizing: border-box;
+}
+
+.uploadedtext{
+    height: 60px;
+    width: 350px;
+    color: black;
+    margin: 0;
+    padding: 0;
+}
 .interface {
   position: relative;
   background-color: var(--color-gray-700);
@@ -1241,12 +1259,12 @@
     top: 3%;
     position: absolute;
 }
-.box img {
+/* .box img {
   width: fit-content;
   height: 53%;
   position: absolute;
   left: 2%;
-}
+} */
 .box .text {
     margin-top: 10px;
     color: #69008d;
